WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
311747
Some textures don't appear in USD files
https://bugs.webkit.org/show_bug.cgi?id=311747
Summary
Some textures don't appear in USD files
Mike Wyrzykowski
Reported
2026-04-08 12:09:42 PDT
Some textures don't appear in USD files
Attachments
Add attachment
proposed patch, testcase, etc.
Mike Wyrzykowski
Comment 1
2026-04-08 12:09:59 PDT
rdar://174186889
Mike Wyrzykowski
Comment 2
2026-04-08 12:15:52 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/62289
EWS
Comment 3
2026-04-09 07:23:58 PDT
Committed
310844@main
(ecc61c70a488): <
https://commits.webkit.org/310844@main
> Reviewed commits have been landed. Closing PR #62289 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug