Some textures don't appear in USD files https://bugs.webkit.org/show_bug.cgi?id=311747 rdar://174186889

Reviewed by Etienne Segonzac.

USD files may contain targa files but we were blocking them
in the web content process resulting in empty textures.

* Source/WebCore/platform/graphics/cg/UTIRegistry.mm:
(WebCore::allowableDefaultSupportedImageTypes):

Canonical link: https://commits.webkit.org/310844@main